<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Score display button -->
    <Button
        android:id="@+id/score2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lilu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage,TextSizeCheck" />

    <!-- Game board layout -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="390dp"
        android:layout_height="390dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <!-- Game over score display -->
        <Button
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="120dp"
            android:background="@color/green"
            android:text="@string/game_over_play_again"
            android:textAlignment="center"
            android:textColor="#616161"
            android:textSize="15dp"
            tools:ignore="RelativeOverlap,SpUsage,TextSizeCheck" />

        <!-- New game button -->
        <Button
            android:id="@+id/new_game"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="130dp"
            android:background="@color/blue"
            android:text="@string/new_game"
            android:textColor="#000000" />

        <!-- Resume game button -->
        <Button
            android:id="@+id/resume"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_game"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="130dp"
            android:background="@color/blue"
            android:text="@string/resume_game"
            android:textAlignment="center"
            android:textColor="#000000" />

        <!-- Play again button -->
        <Button
            android:id="@+id/playagain"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_below="@id/resume"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="120dp"
            android:background="@color/red"
            android:text="@string/game_over_play_againn"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="SpUsage,TextSizeCheck" />

        <!-- Game board area -->
        <RelativeLayout
            android:id="@+id/board"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:layout_marginLeft="5dp"
            android:background="@color/blue"
            android:gravity="center"
            tools:ignore="MissingConstraints,RtlHardcoded" />

        </RelativeLayout>

    <!-- Movement control buttons layout -->
    <LinearLayout
        android:id="@+id/lilu"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">

            <Button
                android:id="@+id/up"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/up" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/left"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/left"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pause"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pause"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/right"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/right"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">

            <Button
                android:id="@+id/down"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/down" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>